# env-check

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  action.yml  mutants.toml
crates/env-check/: Cargo.toml  README.md
crates/env-check-app/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-app/src/: lib.rs
crates/env-check-app/tests/fixtures/: github_event_malformed.json  github_event_partial_pr.json  github_event_pull_request.json  github_event_push.json
crates/env-check-cli/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-cli/src/: lib.rs  main.rs
crates/env-check-cli/tests/: bdd.rs  cli.rs
crates/env-check-cli/tests/fixtures/all_tools_pass/: .tool-versions
crates/env-check-cli/tests/fixtures/debug_logging/: .tool-versions
crates/env-check-cli/tests/fixtures/go_parser_disabled/: env-check.toml  go.mod
crates/env-check-cli/tests/fixtures/hash_manifest/: .tool-versions
crates/env-check-cli/tests/fixtures/hash_manifest_mismatch/: .tool-versions
crates/env-check-cli/tests/fixtures/invalid_sources_filter_config/: env-check.toml
crates/env-check-cli/tests/fixtures/malformed_go_mod/: go.mod
crates/env-check-cli/tests/fixtures/malformed_package_json/: package.json
crates/env-check-cli/tests/fixtures/malformed_pyproject/: pyproject.toml
crates/env-check-cli/tests/fixtures/malformed_tool_versions/: .tool-versions
crates/env-check-cli/tests/fixtures/many_tools_truncation/: .tool-versions
crates/env-check-cli/tests/fixtures/missing_tool/: .tool-versions
crates/env-check-cli/tests/fixtures/missing_tool_finding/: .tool-versions
crates/env-check-cli/tests/fixtures/multiple_missing_tools/: .tool-versions
crates/env-check-cli/tests/fixtures/multiple_node_sources/: package.json
crates/env-check-cli/tests/fixtures/multiple_sources/: .mise.toml  .tool-versions
crates/env-check-cli/tests/fixtures/node_parser_disabled/: env-check.toml
crates/env-check-cli/tests/fixtures/package_json_source/: package.json
crates/env-check-cli/tests/fixtures/parse_error_finding/: .tool-versions
crates/env-check-cli/tests/fixtures/parser_alias_enabled/: env-check.toml
crates/env-check-cli/tests/fixtures/polyglot_project/: go.mod  (+1 more)
crates/env-check-config/: Cargo.toml  README.md
crates/env-check-config/src/: lib.rs
crates/env-check-config/tests/: examples.rs
crates/env-check-domain/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-domain/src/: lib.rs  version_norm.rs
crates/env-check-evidence/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-evidence/src/: lib.rs
crates/env-check-parser-flags/: Cargo.toml  README.md
crates/env-check-parser-flags/src/: lib.rs
crates/env-check-probe/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-probe/src/: lib.rs
crates/env-check-render/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-render/src/: lib.rs
crates/env-check-render/tests/: annotations.rs  render.rs
crates/env-check-render/tests/snapshots/: render__render_all_stable_finding_codes.snap  render__render_empty_data_object.snap  render__render_empty_findings_with_sources.snap  render__render_fail_with_errors.snap  render__render_findings_sorted_by_severity.snap  render__render_findings_without_location.snap  render__render_long_messages.snap  render__render_many_findings_truncation_display.snap  render__render_mixed_severity_findings.snap  render__render_multiple_warnings.snap  render__render_pass_no_findings.snap  render__render_profile_oss.snap  render__render_profile_strict.snap  render__render_profile_team.snap  render__render_single_error_finding.snap  render__render_skip_no_sources.snap  render__render_special_characters_in_messages.snap  render__render_truncated.snap  render__render_truncated_with_many_findings.snap  render__render_verdict_fail_simple.snap  render__render_verdict_pass_simple.snap  render__render_verdict_warn_simple.snap  render__render_warn_with_findings.snap  render__render_with_ci_metadata.snap  render__render_with_multiple_sources.snap  render__render_with_profile_and_fail_on.snap
crates/env-check-reporting/: Cargo.toml  README.md
crates/env-check-reporting/src/: lib.rs
crates/env-check-requirement-normalizer/: Cargo.toml  README.md
crates/env-check-requirement-normalizer/src/: lib.rs
crates/env-check-runtime/: Cargo.toml  README.md
crates/env-check-runtime-metadata/: Cargo.toml  README.md
crates/env-check-runtime-metadata/src/: lib.rs
crates/env-check-runtime/src/: lib.rs
crates/env-check-sources/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-sources-go/: Cargo.toml  README.md
crates/env-check-sources-go/src/: lib.rs
crates/env-check-sources-hash/: Cargo.toml  README.md
crates/env-check-sources-hash/src/: lib.rs
crates/env-check-sources-hash/tests/: parse.rs  proptest.rs
crates/env-check-sources-node/: Cargo.toml  README.md
crates/env-check-sources-node/src/: lib.rs
crates/env-check-sources/src/: go_mod.rs  lib.rs  node.rs  python.rs
crates/env-check-sources/tests/: parse.rs  proptest.rs
crates/env-check-types/: CLAUDE.md  Cargo.toml  README.md
crates/env-check-types/src/: lib.rs
crates/env-check/src/: main.rs
crates/env-check/tests/: smoke.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_go_mod/: complex  with_comments  with_patch  with_toolchain
fuzz/corpus/fuzz_node_version/: with_comment
fuzz/corpus/fuzz_package_json/: full  npm  semver_range  with_hash
fuzz/corpus/fuzz_pyproject_toml/: exact_version  range  tilde  with_tools
fuzz/corpus/fuzz_python_version/: with_comment
fuzz/corpus/parse_hash_manifest/: basic  multiple
fuzz/corpus/parse_mise_toml/: integer_version  with_settings
fuzz/corpus/parse_tool_versions/: nodejs_alias  with_comments
fuzz/fuzz_targets/: fuzz_go_mod.rs  fuzz_node_version.rs  fuzz_nvmrc.rs  fuzz_package_json.rs  fuzz_pyproject_toml.rs  fuzz_python_version.rs  parse_hash_manifest.rs  parse_mise_toml.rs  parse_rust_toolchain.rs  parse_tool_versions.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+73 files in other folders)
