[workspace]
resolver = "2"
members = [
  "crates/env-check-types",
  "crates/env-check-sources",
  "crates/env-check-probe",
  "crates/env-check-domain",
  "crates/env-check-render",
  "crates/env-check-app",
  "crates/env-check-cli",
  "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/EffortlessMetrics/env-check"
homepage = "https://github.com/EffortlessMetrics/env-check"
rust-version = "1.92"
authors = ["Effortless Metrics <dev@effortlessmetrics.com>"]
keywords = ["ci", "devops", "toolchain", "version-check", "validation"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
env-check-types = { version = "0.1.0", path = "crates/env-check-types" }
env-check-sources = { version = "0.1.0", path = "crates/env-check-sources" }
env-check-probe = { version = "0.1.0", path = "crates/env-check-probe" }
env-check-domain = { version = "0.1.0", path = "crates/env-check-domain" }
env-check-render = { version = "0.1.0", path = "crates/env-check-render" }
env-check-app = { version = "0.1.0", path = "crates/env-check-app" }

# Core
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI / UX
clap = { version = "4", features = ["derive", "env"] }

# Parsing / data
toml = "0.8"
toml_edit = "0.22"
regex = "1"
globset = "0.4"

# Runtime helpers
chrono = { version = "0.4", features = ["serde"] }
which = "6"
sha2 = "0.10"
hex = "0.4"

# Testing
insta = "1"
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# BDD (gherkin)
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

semver = "1"
jsonschema = "0.17"

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
installers = ["shell", "powershell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
tag-namespace = "v"
pr-run-mode = "plan"
