[workspace]
resolver = "2"
members = [
  "crates/env-check-types",
  "crates/env-check-sources",
  "crates/env-check-probe",
  "crates/env-check-domain",
  "crates/env-check-render",
  "crates/env-check-app",
  "crates/env-check-cli",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT or apache 2.0"
repository = "https://github.com/EffortlessMetrics/env-check"
homepage = "https://github.com/EffortlessMetrics/env-check"
rust-version = "1.92"
authors = ["Effortless Metrics <git@effortlesssteven.com>"]
keywords = ["ci", "devops", "toolchain", "version-check", "validation"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
env-check-types = { version = "0.1.0", path = "crates/env-check-types" }
env-check-sources = { version = "0.1.0", path = "crates/env-check-sources" }
env-check-probe = { version = "0.1.0", path = "crates/env-check-probe" }
env-check-domain = { version = "0.1.0", path = "crates/env-check-domain" }
env-check-render = { version = "0.1.0", path = "crates/env-check-render" }
env-check-app = { version = "0.1.0", path = "crates/env-check-app" }

# Core
anyhow = "1.0.101"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI / UX
clap = { version = "4.5.57", features = ["derive", "env"] }

# Parsing / data
toml = "0.9.8"
toml_edit = "0.23.9"
regex = "1.12.3"
globset = "0.4.18"

# Runtime helpers
chrono = { version = "0.4.43", features = ["serde"] }
which = "8.0.0"
sha2 = "0.10.9"
hex = "0.4.3"

# Testing
insta = "1.46.3"
proptest = "1.10.0"
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"

# BDD (gherkin)
cucumber = "0.22.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

semver = "1.0.27"
jsonschema = "0.41.0"

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
installers = ["shell", "powershell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
tag-namespace = "v"
pr-run-mode = "plan"
