[workspace]
resolver = "2"
members = [
  "crates/env-check-types",
  "crates/env-check-sources",
  "crates/env-check-config",
  "crates/env-check-sources-node",
  "crates/env-check-sources-python",
  "crates/env-check-sources-go",
  "crates/env-check-sources-hash",
  "crates/env-check-parser-flags",
  "crates/env-check-requirement-normalizer",
  "crates/env-check-probe",
  "crates/env-check-reporting",
  "crates/env-check-runtime",
  "crates/env-check-runtime-metadata",
  "crates/env-check-domain",
  "crates/env-check-evidence",
  "crates/env-check-render",
  "crates/env-check-app",
  "crates/env-check-cli",
  "crates/env-check",
  "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/env-check"
homepage = "https://github.com/EffortlessMetrics/env-check"
rust-version = "1.92"
authors = ["Effortless Metrics <git@effortlesssteven.com>"]
keywords = ["ci", "devops", "toolchain", "version-check", "validation"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
env-check-types = { version = "0.2.0", path = "crates/env-check-types" }
env-check-config = { version = "0.2.0", path = "crates/env-check-config" }
env-check-sources = { version = "0.2.0", path = "crates/env-check-sources", default-features = false }
env-check-sources-node = { version = "0.2.0", path = "crates/env-check-sources-node" }
env-check-sources-python = { version = "0.2.0", path = "crates/env-check-sources-python" }
env-check-sources-go = { version = "0.2.0", path = "crates/env-check-sources-go" }
env-check-sources-hash = { version = "0.2.0", path = "crates/env-check-sources-hash" }
env-check-parser-flags = { version = "0.2.0", path = "crates/env-check-parser-flags", default-features = false }
env-check-requirement-normalizer = { version = "0.2.0", path = "crates/env-check-requirement-normalizer" }
env-check-probe = { version = "0.2.0", path = "crates/env-check-probe" }
env-check-reporting = { version = "0.2.0", path = "crates/env-check-reporting" }
env-check-runtime = { version = "0.2.0", path = "crates/env-check-runtime" }
env-check-runtime-metadata = { version = "0.2.0", path = "crates/env-check-runtime-metadata" }
env-check-domain = { version = "0.2.0", path = "crates/env-check-domain" }
env-check-evidence = { version = "0.2.0", path = "crates/env-check-evidence" }
env-check-render = { version = "0.2.0", path = "crates/env-check-render" }
env-check-app = { version = "0.2.0", path = "crates/env-check-app", default-features = false }
env-check-cli = { version = "0.2.0", path = "crates/env-check-cli", default-features = false }

# Core
anyhow = "1.0.101"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# CLI / UX
clap = { version = "4.5.57", features = ["derive", "env"] }
clap_complete = "4.5.57"

# Parsing / data
toml = "0.9.8"
toml_edit = "0.23.9"
regex = "1.12.3"
globset = "0.4.18"

# Runtime helpers
chrono = { version = "0.4.43", features = ["serde"] }
which = "8.0.0"
sha2 = "0.10.9"
hex = "0.4.3"

# Process management
wait-timeout = "0.2.1"

# Testing
insta = "1.46.3"
proptest = "1.10.0"
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"

# BDD (gherkin)
cucumber = "0.22.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

semver = "1.0.27"
jsonschema = "0.41.0"

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
installers = ["shell", "powershell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
tag-namespace = "v"
pr-run-mode = "plan"
allow-dirty = ["ci"]
