[package]
name = "env-check-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env-check-types = { path = "../env-check-types" }
env-check-sources = { path = "../env-check-sources" }
env-check-probe = { path = "../env-check-probe" }
env-check-domain = { path = "../env-check-domain" }
env-check-render = { path = "../env-check-render" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
hostname = "0.4"
