[package]
name = "env-check-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Application layer and composition root for env-check"
readme = "../../README.md"

[dependencies]
env-check-types.workspace = true
env-check-sources.workspace = true
env-check-probe.workspace = true
env-check-domain.workspace = true
env-check-render.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
hostname = "0.4.2"
