[package]
name = "env-check-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "env-check"
path = "src/main.rs"

[dependencies]
env-check-app = { path = "../env-check-app" }
env-check-types = { path = "../env-check-types" }
env-check-render = { path = "../env-check-render" }

anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
cucumber.workspace = true
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
jsonschema.workspace = true

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
