[package]
name = "env-check-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool to validate machine tool requirements against repository specs"
readme = "../../README.md"

[[bin]]
name = "env-check"
path = "src/main.rs"

[dependencies]
env-check-app.workspace = true
env-check-types.workspace = true
env-check-render.workspace = true

anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
cucumber.workspace = true
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
jsonschema.workspace = true

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
