[package]
name = "env-check-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Clap-based CLI for running env-check checks, markdown rendering, and code explanations."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-cli"

[[bin]]
name = "env-check"
path = "src/main.rs"

[features]
default = ["env-check-app/default"]
parser-node = ["env-check-app/parser-node"]
parser-python = ["env-check-app/parser-python"]
parser-go = ["env-check-app/parser-go"]

[dependencies]
env-check-app.workspace = true
env-check-types.workspace = true
env-check-render.workspace = true

anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
cucumber.workspace = true
tokio.workspace = true
tempfile.workspace = true
serde_json.workspace = true
jsonschema.workspace = true

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false
