[package]
name = "env-check-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure evaluation logic for env-check tool validation"
readme = "../../README.md"

[dependencies]
env-check-types.workspace = true
serde_json.workspace = true
semver.workspace = true
