[package]
name = "env-check-domain"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure policy evaluation from requirements and observations to findings and verdict."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-domain"

[dependencies]
env-check-types.workspace = true
serde_json.workspace = true
semver.workspace = true
