[package]
name = "env-check-evidence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure deterministic helpers that shape receipt evidence under data{}."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-evidence"

[dependencies]
env-check-types.workspace = true
serde.workspace = true
semver.workspace = true

[dev-dependencies]
serde_json.workspace = true
