[package]
name = "env-check-probe"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env-check-types = { path = "../env-check-types" }
anyhow.workspace = true
regex.workspace = true
which.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
