[package]
name = "env-check-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env-check-types = { path = "../env-check-types" }
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
insta.workspace = true
serde_json.workspace = true
