[package]
name = "env-check-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Markdown renderer for env-check receipts"
readme = "../../README.md"

[dependencies]
env-check-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
insta.workspace = true
serde_json.workspace = true
