[package]
name = "env-check-render"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic renderers for env-check receipts (markdown and GitHub annotations)."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-render"

[dependencies]
env-check-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
insta.workspace = true
serde_json.workspace = true
