[package]
name = "env-check-reporting"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure report assembly helpers used by env-check app orchestration."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-reporting"

[dependencies]
env-check-domain.workspace = true
env-check-evidence.workspace = true
env-check-sources.workspace = true
env-check-types.workspace = true
serde_json.workspace = true
