[package]
name = "env-check-requirement-normalizer"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure requirement normalization rules for env-check orchestration."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-requirement-normalizer"

[dependencies]
env-check-config.workspace = true
env-check-types.workspace = true
