[package]
name = "env-check-runtime-metadata"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Runtime metadata helpers for env-check: host/CI detection, git discovery, and event parsing."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-runtime-metadata"

[dependencies]
env-check-types.workspace = true
serde_json.workspace = true
hostname = "0.4.2"
