[package]
name = "env-check-sources-go"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Go parser microcrate for go.mod discovery and parsing."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-sources-go"

[dependencies]
env-check-types.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
