[package]
name = "env-check-sources-hash"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Hash manifest parser microcrate for file hash requirements."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-sources-hash"

[dependencies]
env-check-types.workspace = true
anyhow.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
