[package]
name = "env-check-sources"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env-check-types = { path = "../env-check-types" }
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
tempfile.workspace = true
