[package]
name = "env-check-sources"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Parse tool requirements from .tool-versions, mise.toml, rust-toolchain.toml, and more"
readme = "../../README.md"

[dependencies]
env-check-types.workspace = true
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
tempfile.workspace = true
