[package]
name = "env-check-sources"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic source discovery and parser set for repo-declared tool requirements."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check/tree/main/crates/env-check-sources"

[dependencies]
env-check-types.workspace = true
env-check-parser-flags.workspace = true
env-check-sources-go = { workspace = true, optional = true }
env-check-sources-node = { workspace = true, optional = true }
env-check-sources-python = { workspace = true, optional = true }
env-check-sources-hash.workspace = true
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
globset.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
tempfile.workspace = true

[features]
default = ["parser-node", "parser-python", "parser-go"]
parser-node = ["dep:env-check-sources-node", "env-check-parser-flags/parser-node"]
parser-python = ["dep:env-check-sources-python", "env-check-parser-flags/parser-python"]
parser-go = ["dep:env-check-sources-go", "env-check-parser-flags/parser-go"]
