[package]
name = "env-check"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Machine-truth environment sensor — validates that your machine has the tools a repo requires."
readme = "README.md"
documentation = "https://github.com/EffortlessMetrics/env-check"

[[bin]]
name = "env-check"
path = "src/main.rs"

[features]
default = ["env-check-cli/default"]
parser-node = ["env-check-cli/parser-node"]
parser-python = ["env-check-cli/parser-python"]
parser-go = ["env-check-cli/parser-go"]

[dependencies]
env-check-cli.workspace = true
